# pyldplayer2

./: README.md  pyproject.toml
src/pyldplayer2/: __init__.py
src/pyldplayer2/base/enums/: console.py
src/pyldplayer2/base/models/: leidians_config.py  record.py
src/pyldplayer2/base/objects/: iconsole.py
src/pyldplayer2/coms/: batchConsole.py  console.py  instanceQuery.py  leidianFile.py  recordFile.py
src/pyldplayer2/coms/cli/: __init__.py  consoleCmds.py
tests/: test_coms_query.py  test_file.py
